@@ -136,14 +136,14 @@ BEGIN {
    my $round; # actual granularity
 
    if ($time_hires && eval "&Time::HiRes::clock_gettime (Time::HiRes::CLOCK_MONOTONIC ())") {
-      warn "AnyEvent::Loop: using CLOCK_MONOTONIC as timebase.\n" if $AnyEvent::VERBOSE >= 8;
+      AE::log info => "AnyEvent::Loop: using CLOCK_MONOTONIC as timebase.";
       *_update_clock = sub {
          $NOW  = &Time::HiRes::time;
          $MNOW = Time::HiRes::clock_gettime (&Time::HiRes::CLOCK_MONOTONIC);
       };
 
    } elsif (100 <= $clk_tck && $clk_tck <= 1000000 && eval { (POSIX::times ())[0] != -1 }) { # -1 is also a valid return value :/
-      warn "AnyEvent::Loop: using POSIX::times (monotonic) as timebase.\n" if $AnyEvent::VERBOSE >= 8;
+      AE::log info => "AnyEvent::Loop: using POSIX::times (monotonic) as timebase.";
       my $HZ1 = 1 / $clk_tck;
 
       my $last = (POSIX::times ())[0];
@@ -161,7 +161,7 @@ BEGIN {
       $round = $HZ1;
 
    } elsif (eval "use Time::HiRes (); 1") {
-      warn "AnyEvent::Loop: using Time::HiRes::time (non-monotonic) clock as timebase.\n" if $AnyEvent::VERBOSE >= 8;
+      AE::log info => "AnyEvent::Loop: using Time::HiRes::time (non-monotonic) clock as timebase.";
       *_update_clock = sub {
          $NOW = $MNOW = &Time::HiRes::time;
       };
